# OpenFace

./: .gitignore  CMakeLists.txt
cmake/: OpenFaceConfig.cmake.in
lib/local/FaceAnalyser/: CMakeLists.txt
lib/local/GazeAnalyser/: CMakeLists.txt
lib/local/LandmarkDetector/: CMakeLists.txt
lib/local/Utilities/: CMakeLists.txt
python_api/: CMakeLists.txt  setup.py
python_api/pyopenface/: __init__.py  models.py  openface.py  test.py
python_api/src/: openface.cpp
